TEST_PROGRAMS/VALID_TYPECHECK/type_cast_int2float.go
package main;

func main (){

    var x float64 = 5.0;
    var y int = int(x);

}
