TEST_PROGRAMS/INVALID/04/88.go
package main

func main() {
    var (y = 3)
}
